# agentmd

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  action.yml  all-day-build-contract-agentmd-v0.1.md  all-day-build-contract-agentmd-v0.2.md  all-day-build-contract-agentmd-v0.3.md  all-day-build-contract-minimal-mode.md  build-contract-d2-d5.md  copilot-instructions.md  progress-log.md  pyproject.toml
.github/workflows/: agentmd-drift.yml  ci.yml
agentmd/: __init__.py  analyzer.py  cli.py  drift.py  formatters.py  scorer.py  types.py
agentmd/detectors/: __init__.py  ci.py  common.py  context_completeness.py  framework.py  go.py  language.py  lint.py  package_manager.py  rust.py  subsystem.py  swift.py  test_runner.py
agentmd/generators/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  tiered.py
tests/integration/: test_drift_cli_integration.py  test_tiered_generator.py
tests/unit/: test_analyzer.py  test_ci_detector.py  test_cli.py  test_cli_json.py  test_drift.py  test_formatters.py  test_formatters_matrix.py  test_framework_detector.py  test_generator_languages.py  test_generators.py  test_go_detector.py  test_language_detector.py  test_lint_detector.py  test_minimal_mode.py  test_package_manager_detector.py  test_rust_detector.py  test_scorer.py  test_scorer_false_positives.py  test_subsystem_detector.py  test_swift_detector.py  test_test_runner_detector.py
