[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "agentmd-gen"
version = "0.3.0"
description = "Analyze codebases and generate optimized context files for AI coding agents (Claude Code, Codex, Cursor, Copilot)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mikiships" }]
dependencies = [
  "typer>=0.16.0",
]
keywords = ["context-engineering", "claude-code", "codex", "cursor", "copilot", "agents-md", "claude-md", "cursorrules", "ai", "coding-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/mikiships/agentmd"
Repository = "https://github.com/mikiships/agentmd"
Issues = "https://github.com/mikiships/agentmd/issues"
Changelog = "https://github.com/mikiships/agentmd/blob/main/CHANGELOG.md"

[project.scripts]
agentmd = "agentmd.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agentmd"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["agentmd"]
